# global_trajectory_planner_cpp

./: TESTING_GUIDE.md
.claude/: settings.local.json
global_racetrajectory_optimization_cpp/: CMakeLists.txt  README.md  debug_config.cpp  test_parse.cpp  test_track.csv
global_racetrajectory_optimization_cpp/examples/: CMakeLists.txt  basic_optimization.cpp  track_analysis.cpp
global_racetrajectory_optimization_cpp/include/global_racetrajectory_optimization/: global_racetrajectory_optimization.hpp
global_racetrajectory_optimization_cpp/inputs/tracks/: berlin_2018_fast.csv
global_racetrajectory_optimization_cpp/outputs/: berlin_2018_mincurv_traj.csv  monza_f1tenth_mincurv_traj.csv  silverstone_f1tenth_mincurv_traj.csv  spa_f1tenth_mincurv_traj.csv  spielberg_f1tenth_mincurv_iqp_traj.csv  spielberg_f1tenth_mincurv_traj.csv
global_racetrajectory_optimization_cpp/params/: racecar.ini
global_racetrajectory_optimization_cpp/src/: config_parser.cpp  global_race_trajectory_optimization.cpp  main_global_trajectory.cpp  optimization_interface.cpp  result_export.cpp  track_preparation.cpp  vehicle_parameters.cpp
global_racetrajectory_optimization_cpp/tests/: CMakeLists.txt
trajectory_planning_helpers_cpp/: CMakeLists.txt  README.md
trajectory_planning_helpers_cpp/examples/: CMakeLists.txt  basic_example.cpp  spline_example.cpp
trajectory_planning_helpers_cpp/include/trajectory_planning_helpers/: trajectory_planning_helpers.hpp
trajectory_planning_helpers_cpp/src/: angle3pt.cpp  calc_head_curv_num.cpp  calc_normal_vectors.cpp  calc_splines.cpp  calc_tangent_vectors.cpp  calc_vel_profile.cpp  interp_splines.cpp  normalize_psi.cpp  opt_min_curv.cpp  path_matching_global.cpp  path_matching_local.cpp  spline_approximation.cpp
trajectory_planning_helpers_cpp/tests/: CMakeLists.txt
